[package]
name = "nostd"
version = "0.1.0"
authors = ["red75prime <red75prim@gmail.com>"]
edition = "2021"

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"] }

[profile.release]
lto = true
